# YoutubeQA

./: .gitignore  .pre-commit-config.yaml  Config.py  db_setup.sh  main.py  pyproject.toml
database/: Base.py  Entities.py  _Base.py  session.py
logic/: _add_questions_and_answers.py  _add_video_to_db.py  add_questions_and_answers.py  add_video_to_db.py  add_videos_to_db.py  create_lesson.py  extract_text.py
migrations/: env.py
